Closed
Bug 1677835
Opened 5 years ago
Closed 5 years ago
Drop Intel driver 23.20.16.4973 blocking.
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
85 Branch
People
(Reporter: jrmuizel, Assigned: jrmuizel)
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
The user that reported the problem doesn't see it anymore
and we haven't seen any problems on Nightly.
| Assignee | ||
Comment 1•5 years ago
|
||
The user that reported the problem doesn't see it anymore
and we haven't seen any problems on Nightly.
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d5aa7396bdab
Drop Intel driver 23.20.16.4973 blocking. r=aosmond
| Assignee | ||
Comment 3•5 years ago
|
||
Comment on attachment 9188643 [details]
Bug 1677835 - Drop Intel driver 23.20.16.4973 blocking.
Beta/Release Uplift Approval Request
- User impact if declined: Users will be blocked from getting WebRender.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The user that initially reported the problem can't reproduce the problem. This driver has been enabled on nightly since Oct 15 and we haven't seen any reports of problems. The driver is relatively common so I'd expect that we'd see reports if the problem was reproducible. Instead, I suspect it's intermittent. Because the problem would happen in the GPU process it's not likely to be noticed anyways.
- String changes made/needed:
Attachment #9188643 -
Flags: approval-mozilla-beta?
Comment 4•5 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox85:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Comment 5•5 years ago
|
||
Comment on attachment 9188643 [details]
Bug 1677835 - Drop Intel driver 23.20.16.4973 blocking.
Approved for 84.0b3.
Attachment #9188643 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
| uplift | ||
status-firefox84:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•