Bug 1677835 - Drop Intel driver 23.20.16.4973 blocking. r=aosmond, a=RyanVM

The user that reported the problem doesn't see it anymore
and we haven't seen any problems on Nightly.

Differential Revision: https://phabricator.services.mozilla.com/D97479